avalon/trunk/Avalon.Repository/Querys/ODatas/ODataParsers/AvalonQueryParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.0.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.0.2 Querys\\NdQuery.g3 2013-10-08 10:23:05

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace Avalon.Framework.Querys
{
    [System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.0.2")]
    [System.CLSCompliant(false)]
    public partial class AvalonQueryParser : Antlr.Runtime.Parser
    {
        internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALLPAGES", "AND", "ASC", "AVERAGE", "BOOL", "BYTE", "COUNT", "DATETIME", "DESC", "DOUBLE", "ENDSWITH", "EQUALS", "ESC_SEQ", "FILTER", "GREATERTHAN", "GREATERTHANOREQUAL", "GUID", "HEX_DIGIT", "HEX_PAIR", "IDENTIFIER", "IN", "INLINECOUNT", "INT", "LESSTHAN", "LESSTHANOREQUAL", "LONG", "MAX", "MIN", "NEWLINE", "NONE", "NOT", "NOTEQUALS", "NOTIN", "NULL", "OCTAL_ESC", "OR", "ORDERBY", "SELECT", "SINGLE", "SKIP", "SPACE", "STARTSWITH", "STRING", "SUBSTRINGOF", "SUM", "TOP", "UNICODE_ESC", "'&'", "'('", "')'", "','"
	};
        public const int EOF = -1;
        public const int ALLPAGES = 4;
        public const int AND = 5;
        public const int ASC = 6;
        public const int AVERAGE = 7;
        public const int BOOL = 8;
        public const int BYTE = 9;
        public const int COUNT = 10;
        public const int DATETIME = 11;
        public const int DESC = 12;
        public const int DOUBLE = 13;
        public const int ENDSWITH = 14;
        public const int EQUALS = 15;
        public const int ESC_SEQ = 16;
        public const int FILTER = 17;
        public const int GREATERTHAN = 18;
        public const int GREATERTHANOREQUAL = 19;
        public const int GUID = 20;
        public const int HEX_DIGIT = 21;
        public const int HEX_PAIR = 22;
        public const int IDENTIFIER = 23;
        public const int IN = 24;
        public const int INLINECOUNT = 25;
        public const int INT = 26;
        public const int LESSTHAN = 27;
        public const int LESSTHANOREQUAL = 28;
        public const int LONG = 29;
        public const int MAX = 30;
        public const int MIN = 31;
        public const int NEWLINE = 32;
        public const int NONE = 33;
        public const int NOT = 34;
        public const int NOTEQUALS = 35;
        public const int NOTIN = 36;
        public const int NULL = 37;
        public const int OCTAL_ESC = 38;
        public const int OR = 39;
        public const int ORDERBY = 40;
        public const int SELECT = 41;
        public const int SINGLE = 42;
        public const int SKIP = 43;
        public const int SPACE = 44;
        public const int STARTSWITH = 45;
        public const int STRING = 46;
        public const int SUBSTRINGOF = 47;
        public const int SUM = 48;
        public const int TOP = 49;
        public const int UNICODE_ESC = 50;
        public const int T__51 = 51;
        public const int T__52 = 52;
        public const int T__53 = 53;
        public const int T__54 = 54;

        public AvalonQueryParser(ITokenStream input)
            : this(input, new RecognizerSharedState())
        {
        }
        public AvalonQueryParser(ITokenStream input, RecognizerSharedState state)
            : base(input, state)
        {
            ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
            CreateTreeAdaptor(ref treeAdaptor);
            TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
            OnCreated();
        }
        // Implement this function in your helper file to use a custom tree adaptor
        partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

        private ITreeAdaptor adaptor;

        public ITreeAdaptor TreeAdaptor
        {
            get
            {
                return adaptor;
            }

            set
            {
                this.adaptor = value;
            }
        }

        public override string[] TokenNames { get { return AvalonQueryParser.tokenNames; } }
        public override string GrammarFileName { get { return "Querys\\NdQuery.g3"; } }


        partial void OnCreated();
        partial void EnterRule(string ruleName, int ruleIndex);
        partial void LeaveRule(string ruleName, int ruleIndex);

        #region Rules
        partial void EnterRule_prog();
        partial void LeaveRule_prog();
        // $ANTLR start "prog"
        // Querys\\NdQuery.g3:18:1: public prog : ( param ( '&' ! param )* )* ;
        [GrammarRule("prog")]
        public AstParserRuleReturnScope<CommonTree, CommonToken> prog()
        {
            EnterRule_prog();
            EnterRule("prog", 1);
            TraceIn("prog", 1);
            AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
            retval.Start = (CommonToken)input.LT(1);

            CommonTree root_0 = default(CommonTree);

            CommonToken char_literal2 = default(CommonToken);
            AstParserRuleReturnScope<CommonTree, CommonToken> param1 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> param3 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

            CommonTree char_literal2_tree = default(CommonTree);
            try
            {
                DebugEnterRule(GrammarFileName, "prog");
                DebugLocation(18, 25);
                try
                {
                    // Querys\\NdQuery.g3:19:2: ( ( param ( '&' ! param )* )* )
                    DebugEnterAlt(1);
                    // Querys\\NdQuery.g3:19:4: ( param ( '&' ! param )* )*
                    {
                        root_0 = (CommonTree)adaptor.Nil();

                        DebugLocation(19, 4);
                        // Querys\\NdQuery.g3:19:4: ( param ( '&' ! param )* )*
                        try
                        {
                            DebugEnterSubRule(2);
                            while (true)
                            {
                                int alt2 = 2;
                                try
                                {
                                    DebugEnterDecision(2, false);
                                    int LA2_1 = input.LA(1);

                                    if ((LA2_1 == FILTER || LA2_1 == INLINECOUNT || (LA2_1 >= ORDERBY && LA2_1 <= SELECT) || LA2_1 == SKIP || LA2_1 == TOP))
                                    {
                                        alt2 = 1;
                                    }


                                }
                                finally { DebugExitDecision(2); }
                                switch (alt2)
                                {
                                    case 1:
                                        DebugEnterAlt(1);
                                        // Querys\\NdQuery.g3:19:5: param ( '&' ! param )*
                                        {
                                            DebugLocation(19, 5);
                                            PushFollow(Follow._param_in_prog73);
                                            param1 = param();
                                            PopFollow();

                                            adaptor.AddChild(root_0, param1.Tree);
                                            DebugLocation(19, 11);
                                            // Querys\\NdQuery.g3:19:11: ( '&' ! param )*
                                            try
                                            {
                                                DebugEnterSubRule(1);
                                                while (true)
                                                {
                                                    int alt1 = 2;
                                                    try
                                                    {
                                                        DebugEnterDecision(1, false);
                                                        int LA1_1 = input.LA(1);

                                                        if ((LA1_1 == 51))
                                                        {
                                                            alt1 = 1;
                                                        }


                                                    }
                                                    finally { DebugExitDecision(1); }
                                                    switch (alt1)
                                                    {
                                                        case 1:
                                                            DebugEnterAlt(1);
                                                            // Querys\\NdQuery.g3:19:12: '&' ! param
                                                            {
                                                                DebugLocation(19, 15);
                                                                char_literal2 = (CommonToken)Match(input, 51, Follow._51_in_prog76);
                                                                DebugLocation(19, 17);
                                                                PushFollow(Follow._param_in_prog79);
                                                                param3 = param();
                                                                PopFollow();

                                                                adaptor.AddChild(root_0, param3.Tree);

                                                            }
                                                            break;

                                                        default:
                                                            goto loop1;
                                                    }
                                                }

                                            loop1:
                                                ;

                                            }
                                            finally { DebugExitSubRule(1); }


                                        }
                                        break;

                                    default:
                                        goto loop2;
                                }
                            }

                        loop2:
                            ;

                        }
                        finally { DebugExitSubRule(2); }


                    }

                    retval.Stop = (CommonToken)input.LT(-1);

                    retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                    adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

                }
                catch (RecognitionException re)
                {
                    ReportError(re);
                    Recover(input, re);
                    retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

                }
                finally
                {
                    TraceOut("prog", 1);
                    LeaveRule("prog", 1);
                    LeaveRule_prog();
                }
                DebugLocation(19, 25);
            }
            finally { DebugExitRule(GrammarFileName, "prog"); }
            return retval;

        }
        // $ANTLR end "prog"

        partial void EnterRule_param();
        partial void LeaveRule_param();
        // $ANTLR start "param"
        // Querys\\NdQuery.g3:21:1: param : ( orderby | top | skip | filter | select | inlinecount ) ;
        [GrammarRule("param")]
        private AstParserRuleReturnScope<CommonTree, CommonToken> param()
        {
            EnterRule_param();
            EnterRule("param", 2);
            TraceIn("param", 2);
            AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
            retval.Start = (CommonToken)input.LT(1);

            CommonTree root_0 = default(CommonTree);

            AstParserRuleReturnScope<CommonTree, CommonToken> orderby4 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> top5 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> skip6 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> filter7 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> select8 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> inlinecount9 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

            try
            {
                DebugEnterRule(GrammarFileName, "param");
                DebugLocation(21, 62);
                try
                {
                    // Querys\\NdQuery.g3:21:7: ( ( orderby | top | skip | filter | select | inlinecount ) )
                    DebugEnterAlt(1);
                    // Querys\\NdQuery.g3:21:9: ( orderby | top | skip | filter | select | inlinecount )
                    {
                        root_0 = (CommonTree)adaptor.Nil();

                        DebugLocation(21, 9);
                        // Querys\\NdQuery.g3:21:9: ( orderby | top | skip | filter | select | inlinecount )
                        int alt3 = 6;
                        try
                        {
                            DebugEnterSubRule(3);
                            try
                            {
                                DebugEnterDecision(3, false);
                                switch (input.LA(1))
                                {
                                    case ORDERBY:
                                        {
                                            alt3 = 1;
                                        }
                                        break;
                                    case TOP:
                                        {
                                            alt3 = 2;
                                        }
                                        break;
                                    case SKIP:
                                        {
                                            alt3 = 3;
                                        }
                                        break;
                                    case FILTER:
                                        {
                                            alt3 = 4;
                                        }
                                        break;
                                    case SELECT:
                                        {
                                            alt3 = 5;
                                        }
                                        break;
                                    case INLINECOUNT:
                                        {
                                            alt3 = 6;
                                        }
                                        break;
                                    default:
                                        {
                                            NoViableAltException nvae = new NoViableAltException("", 3, 0, input, 1);
                                            DebugRecognitionException(nvae);
                                            throw nvae;
                                        }
                                }

                            }
                            finally { DebugExitDecision(3); }
                            switch (alt3)
                            {
                                case 1:
                                    DebugEnterAlt(1);
                                    // Querys\\NdQuery.g3:21:10: orderby
                                    {
                                        DebugLocation(21, 10);
                                        PushFollow(Follow._orderby_in_param92);
                                        orderby4 = orderby();
                                        PopFollow();

                                        adaptor.AddChild(root_0, orderby4.Tree);

                                    }
                                    break;
                                case 2:
                                    DebugEnterAlt(2);
                                    // Querys\\NdQuery.g3:21:20: top
                                    {
                                        DebugLocation(21, 20);
                                        PushFollow(Follow._top_in_param96);
                                        top5 = top();
                                        PopFollow();

                                        adaptor.AddChild(root_0, top5.Tree);

                                    }
                                    break;
                                case 3:
                                    DebugEnterAlt(3);
                                    // Querys\\NdQuery.g3:21:26: skip
                                    {
                                        DebugLocation(21, 26);
                                        PushFollow(Follow._skip_in_param100);
                                        skip6 = skip();
                                        PopFollow();

                                        adaptor.AddChild(root_0, skip6.Tree);

                                    }
                                    break;
                                case 4:
                                    DebugEnterAlt(4);
                                    // Querys\\NdQuery.g3:21:33: filter
                                    {
                                        DebugLocation(21, 33);
                                        PushFollow(Follow._filter_in_param104);
                                        filter7 = filter();
                                        PopFollow();

                                        adaptor.AddChild(root_0, filter7.Tree);

                                    }
                                    break;
                                case 5:
                                    DebugEnterAlt(5);
                                    // Querys\\NdQuery.g3:21:42: select
                                    {
                                        DebugLocation(21, 42);
                                        PushFollow(Follow._select_in_param108);
                                        select8 = select();
                                        PopFollow();

                                        adaptor.AddChild(root_0, select8.Tree);

                                    }
                                    break;
                                case 6:
                                    DebugEnterAlt(6);
                                    // Querys\\NdQuery.g3:21:51: inlinecount
                                    {
                                        DebugLocation(21, 51);
                                        PushFollow(Follow._inlinecount_in_param112);
                                        inlinecount9 = inlinecount();
                                        PopFollow();

                                        adaptor.AddChild(root_0, inlinecount9.Tree);

                                    }
                                    break;

                            }
                        }
                        finally { DebugExitSubRule(3); }


                    }

                    retval.Stop = (CommonToken)input.LT(-1);

                    retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                    adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

                }
                catch (RecognitionException re)
                {
                    ReportError(re);
                    Recover(input, re);
                    retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

                }
                finally
                {
                    TraceOut("param", 2);
                    LeaveRule("param", 2);
                    LeaveRule_param();
                }
                DebugLocation(21, 62);
            }
            finally { DebugExitRule(GrammarFileName, "param"); }
            return retval;

        }
        // $ANTLR end "param"

        partial void EnterRule_skip();
        partial void LeaveRule_skip();
        // $ANTLR start "skip"
        // Querys\\NdQuery.g3:23:1: skip : SKIP ^ ( INT )+ ;
        [GrammarRule("skip")]
        private AstParserRuleReturnScope<CommonTree, CommonToken> skip()
        {
            EnterRule_skip();
            EnterRule("skip", 3);
            TraceIn("skip", 3);
            AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
            retval.Start = (CommonToken)input.LT(1);

            CommonTree root_0 = default(CommonTree);

            CommonToken SKIP10 = default(CommonToken);
            CommonToken INT11 = default(CommonToken);

            CommonTree SKIP10_tree = default(CommonTree);
            CommonTree INT11_tree = default(CommonTree);
            try
            {
                DebugEnterRule(GrammarFileName, "skip");
                DebugLocation(23, 13);
                try
                {
                    // Querys\\NdQuery.g3:24:2: ( SKIP ^ ( INT )+ )
                    DebugEnterAlt(1);
                    // Querys\\NdQuery.g3:24:4: SKIP ^ ( INT )+
                    {
                        root_0 = (CommonTree)adaptor.Nil();

                        DebugLocation(24, 8);
                        SKIP10 = (CommonToken)Match(input, SKIP, Follow._SKIP_in_skip123);
                        SKIP10_tree = (CommonTree)adaptor.Create(SKIP10);
                        root_0 = (CommonTree)adaptor.BecomeRoot(SKIP10_tree, root_0);
                        DebugLocation(24, 10);
                        // Querys\\NdQuery.g3:24:10: ( INT )+
                        int cnt4 = 0;
                        try
                        {
                            DebugEnterSubRule(4);
                            while (true)
                            {
                                int alt4 = 2;
                                try
                                {
                                    DebugEnterDecision(4, false);
                                    int LA4_1 = input.LA(1);

                                    if ((LA4_1 == INT))
                                    {
                                        alt4 = 1;
                                    }


                                }
                                finally { DebugExitDecision(4); }
                                switch (alt4)
                                {
                                    case 1:
                                        DebugEnterAlt(1);
                                        // Querys\\NdQuery.g3:24:10: INT
                                        {
                                            DebugLocation(24, 10);
                                            INT11 = (CommonToken)Match(input, INT, Follow._INT_in_skip126);
                                            INT11_tree = (CommonTree)adaptor.Create(INT11);
                                            adaptor.AddChild(root_0, INT11_tree);

                                        }
                                        break;

                                    default:
                                        if (cnt4 >= 1)
                                            goto loop4;

                                        EarlyExitException eee4 = new EarlyExitException(4, input);
                                        DebugRecognitionException(eee4);
                                        throw eee4;
                                }
                                cnt4++;
                            }
                        loop4:
                            ;

                        }
                        finally { DebugExitSubRule(4); }


                    }

                    retval.Stop = (CommonToken)input.LT(-1);

                    retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                    adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

                }
                catch (RecognitionException re)
                {
                    ReportError(re);
                    Recover(input, re);
                    retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

                }
                finally
                {
                    TraceOut("skip", 3);
                    LeaveRule("skip", 3);
                    LeaveRule_skip();
                }
                DebugLocation(24, 13);
            }
            finally { DebugExitRule(GrammarFileName, "skip"); }
            return retval;

        }
        // $ANTLR end "skip"

        partial void EnterRule_top();
        partial void LeaveRule_top();
        // $ANTLR start "top"
        // Querys\\NdQuery.g3:26:1: top : TOP ^ ( INT )+ ;
        [GrammarRule("top")]
        private AstParserRuleReturnScope<CommonTree, CommonToken> top()
        {
            EnterRule_top();
            EnterRule("top", 4);
            TraceIn("top", 4);
            AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
            retval.Start = (CommonToken)input.LT(1);

            CommonTree root_0 = default(CommonTree);

            CommonToken TOP12 = default(CommonToken);
            CommonToken INT13 = default(CommonToken);

            CommonTree TOP12_tree = default(CommonTree);
            CommonTree INT13_tree = default(CommonTree);
            try
            {
                DebugEnterRule(GrammarFileName, "top");
                DebugLocation(26, 12);
                try
                {
                    // Querys\\NdQuery.g3:27:2: ( TOP ^ ( INT )+ )
                    DebugEnterAlt(1);
                    // Querys\\NdQuery.g3:27:4: TOP ^ ( INT )+
                    {
                        root_0 = (CommonTree)adaptor.Nil();

                        DebugLocation(27, 7);
                        TOP12 = (CommonToken)Match(input, TOP, Follow._TOP_in_top137);
                        TOP12_tree = (CommonTree)adaptor.Create(TOP12);
                        root_0 = (CommonTree)adaptor.BecomeRoot(TOP12_tree, root_0);
                        DebugLocation(27, 9);
                        // Querys\\NdQuery.g3:27:9: ( INT )+
                        int cnt5 = 0;
                        try
                        {
                            DebugEnterSubRule(5);
                            while (true)
                            {
                                int alt5 = 2;
                                try
                                {
                                    DebugEnterDecision(5, false);
                                    int LA5_1 = input.LA(1);

                                    if ((LA5_1 == INT))
                                    {
                                        alt5 = 1;
                                    }


                                }
                                finally { DebugExitDecision(5); }
                                switch (alt5)
                                {
                                    case 1:
                                        DebugEnterAlt(1);
                                        // Querys\\NdQuery.g3:27:9: INT
                                        {
                                            DebugLocation(27, 9);
                                            INT13 = (CommonToken)Match(input, INT, Follow._INT_in_top140);
                                            INT13_tree = (CommonTree)adaptor.Create(INT13);
                                            adaptor.AddChild(root_0, INT13_tree);

                                        }
                                        break;

                                    default:
                                        if (cnt5 >= 1)
                                            goto loop5;

                                        EarlyExitException eee5 = new EarlyExitException(5, input);
                                        DebugRecognitionException(eee5);
                                        throw eee5;
                                }
                                cnt5++;
                            }
                        loop5:
                            ;

                        }
                        finally { DebugExitSubRule(5); }


                    }

                    retval.Stop = (CommonToken)input.LT(-1);

                    retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                    adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

                }
                catch (RecognitionException re)
                {
                    ReportError(re);
                    Recover(input, re);
                    retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

                }
                finally
                {
                    TraceOut("top", 4);
                    LeaveRule("top", 4);
                    LeaveRule_top();
                }
                DebugLocation(27, 12);
            }
            finally { DebugExitRule(GrammarFileName, "top"); }
            return retval;

        }
        // $ANTLR end "top"

        partial void EnterRule_filter();
        partial void LeaveRule_filter();
        // $ANTLR start "filter"
        // Querys\\NdQuery.g3:29:1: filter : FILTER ^ filterexpression[false] ;
        [GrammarRule("filter")]
        private AstParserRuleReturnScope<CommonTree, CommonToken> filter()
        {
            EnterRule_filter();
            EnterRule("filter", 5);
            TraceIn("filter", 5);
            AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
            retval.Start = (CommonToken)input.LT(1);

            CommonTree root_0 = default(CommonTree);

            CommonToken FILTER14 = default(CommonToken);
            AstParserRuleReturnScope<CommonTree, CommonToken> filterexpression15 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

            CommonTree FILTER14_tree = default(CommonTree);
            try
            {
                DebugEnterRule(GrammarFileName, "filter");
                DebugLocation(29, 34);
                try
                {
                    // Querys\\NdQuery.g3:30:2: ( FILTER ^ filterexpression[false] )
                    DebugEnterAlt(1);
                    // Querys\\NdQuery.g3:30:4: FILTER ^ filterexpression[false]
                    {
                        root_0 = (CommonTree)adaptor.Nil();

                        DebugLocation(30, 10);
                        FILTER14 = (CommonToken)Match(input, FILTER, Follow._FILTER_in_filter151);
                        FILTER14_tree = (CommonTree)adaptor.Create(FILTER14);
                        root_0 = (CommonTree)adaptor.BecomeRoot(FILTER14_tree, root_0);
                        DebugLocation(30, 12);
                        PushFollow(Follow._filterexpression_in_filter154);
                        filterexpression15 = filterexpression(false);
                        PopFollow();

                        adaptor.AddChild(root_0, filterexpression15.Tree);

                    }

                    retval.Stop = (CommonToken)input.LT(-1);

                    retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
                    adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

                }
                catch (RecognitionException re)
                {
                    ReportError(re);
                    Recover(input, re);
                    retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

                }
                finally
                {
                    TraceOut("filter", 5);
                    LeaveRule("filter", 5);
                    LeaveRule_filter();
                }
                DebugLocation(30, 34);
            }
            finally { DebugExitRule(GrammarFileName, "filter"); }
            return retval;

        }
        // $ANTLR end "filter"

        partial void EnterRule_select();
        partial void LeaveRule_select();
        // $ANTLR start "select"
        // Querys\\NdQuery.g3:32:1: select : SELECT ^ propertyname ( ( SPACE )? ',' ( SPACE )? propertyname )* ;
        [GrammarRule("select")]
        private AstParserRuleReturnScope<CommonTree, CommonToken> select()
        {
            EnterRule_select();
            EnterRule("select", 6);
            TraceIn("select", 6);
            AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
            retval.Start = (CommonToken)input.LT(1);

            CommonTree root_0 = default(CommonTree);

            CommonToken SELECT16 = default(CommonToken);
            CommonToken SPACE18 = default(CommonToken);
            CommonToken char_literal19 = default(CommonToken);
            CommonToken SPACE20 = default(CommonToken);
            AstParserRuleReturnScope<CommonTree, CommonToken> propertyname17 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
            AstParserRuleReturnScope<CommonTree, CommonToken> propertyname21 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

            CommonTree SELECT16_tree = default(CommonTree);
            CommonTree SPACE18_tree = default(CommonTree);
            CommonTree char_literal19_tree = default(CommonTree);
            CommonTree SPACE20_tree = default(CommonTree);
            try
            {
                DebugEnterRule(GrammarFileName, "select");
                DebugLocation(32, 57);
                try
                {
                    // Querys\\NdQuery.g3:33:2: ( SELECT ^ propertyname ( ( SPACE )? ',' ( SPACE )? propertyname )* )
                    DebugEnterAlt(1);
                    // Querys\\NdQuery.g3:33:4: SELECT ^ propertyname ( ( SPACE )? ',' ( SPACE )? propertyname )*
                    {
                        root_0 = (CommonTree)adaptor.Nil();

                        DebugLocation(33, 10);
                        SELECT16 = (CommonToken)Match(input, SELECT, Follow._SELECT_in_select165);
                        SELECT16_tree = (CommonTree)adaptor.Create(SELECT16);
                        root_0 = (CommonTree)adaptor.BecomeRoot(SELECT16_tree, root_0);
                        DebugLocation(33, 12);
                        PushFollow(Follow._propertyname_in_select168);
                        propertyname17 = propertyname();
                        PopFollow();

                        adaptor.AddChild(root_0, propertyname17.Tree);
                        DebugLocation(33, 25);
                        // Querys\\NdQuery.g3:33:25: ( ( SPACE )? ',' ( SPACE )? propertyname )*
                        try
                        {
                            DebugEnterSubRule(8);
                            while (true)
                            {
                                int alt8 = 2;
                                try
                                {
                                    DebugEnterDecision(8, false);
                                    int LA8_1 = input.LA(1);

                                    if ((LA8_1 == SPACE || LA8_1 == 54))
                                    {
                                        alt8 = 1;
                                    }


                                }
                                finally { DebugExitDecision(8); }
                                switch (alt8)
                                {
                                    case 1:
                                        DebugEnterAlt(1);
                                        // Querys\\NdQuery.g3:33:26: ( SPACE )? ',' ( SPACE )? propertyname
                                        {
                                            DebugLocation(33, 26);
                                            // Querys\\NdQuery.g3:33:26: ( SPACE )?
                                            int alt6 = 2;
                                            try
                                            {
                                                DebugEnterSubRule(6);
                                                try
                                                {
                                                    DebugEnterDecision(6, false);
                                                    int LA6_1 = input.LA(1);

                                                    if ((LA6_1 == SPACE))
